--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -7,3 +7,9 @@
     min-height: 100vh;
     background-color: #262626;
 }
+
+.fontName {
+  font-family: 'Vobca-Black', monospace, sans-serif;
+  font-size: 100px;
+  font-weight: 900;
+}
