--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -9,7 +9,7 @@
 }
 
 .fontName {
-  font-family: 'Vobca-Black', monospace, sans-serif;
+  // font-family: --font-Vobca;
   font-size: 100px;
   font-weight: 900;
 }
