--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,16 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-Vobca: 'Vobca-Black', 'Courier New', monospace, Sans-serif;
+  --font-Poppins: 'Poppins', 'Courier New', monospace, Sans-serif;
+  --foreground: #262626;
+  --background-color-light: #F3F3F3;
+  --background-color-dark: #0D1116;
+  --font-color-light: #F7F7F7;
+  --font-color-dark: #282828; 
+  --font-color-red: #E82E25;
 
-  --foreground-rgb: 255, 21, 21;
-  --background-start-rgb: 255, 21, 21;
-  --background-end-rgb: 255, 21, 21;
-
-  --primary-glow: conic-gradient(
+  /* --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #f70909f1 0deg,
     #f70909f1 55deg,
@@ -20,9 +24,9 @@
   --secondary-glow: radial-gradient(
     rgba(255, 255, 255, 1),
     rgba(255, 21, 21, 0.866)
-  );
+  ); */
 
-  --tile-start-rgb: 239, 245, 249;
+  /* --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
   --tile-border: conic-gradient(
     #f7000080,
@@ -32,15 +36,16 @@
     #ec1313ef,
     #ec1313ef,
     #ec1313ef
-  );
-
+  ); */
+/* 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+ */
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -71,28 +76,27 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-Vobca);
+  color: var(--font-color-light);
 }
+
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background-color-dark);
 }
 
 a {
@@ -100,18 +104,6 @@ a {
   text-decoration: none;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
-
-/* @font-face {
-  font-family: 'Vobca';
-  src: url('../public/assets/fonts/Vobca-Black.ttf') format('ttf');
-  font-weight: normal;
-  font-style: normal;
-} */
 
 @font-face {
   font-family: 'Vobca-Black';
@@ -121,7 +113,10 @@ a {
 @font-face {
   font-family: 'Poppins';
   src: url('../public/assets/fonts/Poppins-Medium.ttf') format('ttf');
-  font-weight: normal;
-  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ethnocentric';
+  src: url('../public/assets/fonts/ethnocentric.ttf') format('ttf');
 }
 
