--- a/app/components/landing-component/landing-page.module.scss
+++ b/app/components/landing-component/landing-page.module.scss
@@ -268,6 +268,16 @@
             // }
 
         }
+
+        .direction {
+            padding-top: 20px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            h4 {
+                color: var(--font-color-dark);
+            }
+        }
     }
 
     .bottomDiv {
