--- a/app/components/landing-component/landing-page.module.scss
+++ b/app/components/landing-component/landing-page.module.scss
@@ -8,6 +8,21 @@
     position: relative;
     background-color: var(--background-color-dark);
 
+    @media (max-width: 576px) {
+    }
+
+    @media (min-width: 576px) and (max-width: 767px) {
+    }
+
+    @media (min-width: 768px) and (max-width: 991px) {
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+    }
+
+    @media (min-width: 1200px) {
+    }
+
     img {
         position: absolute;
         left: 6%;
@@ -86,7 +101,7 @@
     .ps5Main {
         position: absolute;
         left: 350px;
-        bottom: 10dvh;
+        bottom: 30px;
         overflow: hidden;
         filter: drop-shadow(0 0 5px rgba(225, 225, 225, 0.703));
     }
@@ -274,6 +289,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+
             h4 {
                 color: var(--font-color-dark);
             }
@@ -283,15 +299,16 @@
     .bottomDiv {
         align-self: center;
         margin-bottom: 20px;
+
         .copyright {
             color: #87190b;
             font-size: 13px;
             font-family: var(--font-Poppins-regular);
-            
+
         }
     }
 
 
-  
+
 
 }
