--- a/app/components/landing-component/landing-page.module.scss
+++ b/app/components/landing-component/landing-page.module.scss
@@ -211,7 +211,7 @@
     }
 
     @media (max-width: 576px) {
-        background-position: -200px -300px;
+        background-position: 100px -300px;
         // margin-top: 70px;
         justify-content: space-between;
 
@@ -227,7 +227,9 @@
         }
 
         .homeQuote {
-            justify-self: center;
+            justify-self: flex-end;
+            margin-top: 100px;
+            
         }
 
         a {
